Picking screen 70% done - DONE: Button changes and alignment changes - DONE: Ability layout changes - DONE: Colour Fixes

--- a/content/dota_addons/dota_imba/panorama/styles/custom_game/hero_selection.css
+++ b/content/dota_addons/dota_imba/panorama/styles/custom_game/hero_selection.css
@@ -42,7 +42,7 @@
 }
 
 #ChatPlaceholder {
-	width: 500px;
+	width: 420px;
 	height: 400px;
 	vertical-align: bottom;
 	horizontal-align: right;
@@ -105,10 +105,6 @@ Label {
 	color: white;
 }
 
-#SectionTitle {
-	padding: 0 12px;
-	horizontal-align: center;
-}
 
 #PregameBG {
 	width: 100%;
@@ -708,7 +704,7 @@ RadioButton.Disabled:selected {
 }
 
 #HeroSelector {
-	width: 45%;
+	/* width: 45%; */
 	height: fill-parent-flow(1.0);
 	flow-children: down;
 	horizontal-align: middle;
@@ -750,24 +746,30 @@ RadioButton.Disabled:selected {
 	z-index: -10;
 }
 
-#AbilitiesPreview {
-	width: 80%;
+#HeroPreviewContainer {
+	width: 100%;
 	height: 50%;
+}
+
+#AbilitiesPreview {
 	margin-top: 50px;
 	align: center top;
 	flow-children: right;
 }
 
 #AbilitiesPreview.four_abilities .PickedHeroAbility {
-	width: fill-parent-flow( 0.24 );
+	width: 70px;
+	align: left center;
 }
 
 #AbilitiesPreview.five_abilities .PickedHeroAbility {
-	width: fill-parent-flow( 0.19 );
+	width: 70px;
+	align: left center;
 }
 
 #AbilitiesPreview.six_abilities .PickedHeroAbility {
-	width: fill-parent-flow( 0.15 );
+	width: 70px;
+	align: left center;
 }
 
 .PickedHeroAbility {
@@ -793,6 +795,7 @@ RadioButton.Disabled:selected {
 	background-repeat: no-repeat;
 	background-position: center;
 	visibility: collapse;
+	background-size: contain;
 }
 
 .AspectRatio16x10 #AghanimPreview {
@@ -963,10 +966,7 @@ DOTAScenePanel {
 	margin-bottom: -30px;
 }
 
-#HeroPreviewContainer {
-	width: fill-parent-flow(1.0);
-	height: fill-parent-flow(2.0);
-}
+
 #HeroPickContainer {
 	/* height: fill-parent-flow(1.0); */
 	flow-children: right;
@@ -975,8 +975,8 @@ DOTAScenePanel {
 }
 
 .HeroPickerButton {
-	height: 70px;
-	width: 210px;
+	height: 75px;
+	/* width: 210px; */
 	min-width: 215px;
 	text-align: center center;
 	box-shadow: #00000040 -3px -3px 6px 6px;
@@ -985,11 +985,11 @@ DOTAScenePanel {
 	margin-right: 20px;
 }
 .HeroPickerButton Label {
-	margin-top: 5px;
 	align:  center center;
 	text-transform: uppercase;
-	font-size: 20px;
+	font-size: 16px;
 	letter-spacing: 1px;
+	text-shadow: 0px 1px 2px 2.0 #00000040;
 }
 
 .HeroPickerButton:hover {
@@ -999,8 +999,56 @@ DOTAScenePanel {
 #HeroLockIn {
 	visibility: collapse;
 	width:  340px;
-	background-color: gradient( radial, 50% 50%, 0% 0%,60% 60%, from( #1f754d ),  to( #17583a ) );
-	border-top: 1px solid #1b6542cc;			  
+	background-color: gradient( radial, 50% 50%, 0% -10%,70% 80%, from( #218155 ),  to( #17583a ) );
+	/* border-top: 1px solid #1b6542cc; */
+	flow-children:  right;			  
+}
+
+.HeroPickerButton .border-top {
+	align: center top;
+	width: 100%;
+	height: 1px;
+	background-color:  #ffffff14;
+	margin-right: -100%;
+	z-index: 2;
+}
+
+#HeroPickWrapper {
+	flow-children:  down;
+	align:  center center;
+	width: 215px;
+}
+#HeroLockIn Label {
+	margin-top: 11px;
+}
+#HeroLockIn Label.SectionTitle {
+	text-overflow: shrink;	
+	/* width:  90%; */
+	height: 30px;
+	line-height: 1;
+	white-space: nowrap;
+	margin-top: 3px;
+}
+Label.SectionTitle {
+	text-transform: uppercase;
+	padding: 0 20px;
+	font-size: 20px;
+	font-weight: bold;
+	letter-spacing: 1px;
+	height: 20px;
+	margin-top: 3px;
+	/* text-overflow: shrink; */
+	/* width:  100%; */
+	text-align: center;
+}
+
+#CurrentHero {
+	width: 125px;
+	height: 100%;
+	align: right center;
+}
+#CurrentHero DOTAHeroImage {
+	height: 100%;
 }
 
 #HeroLockIn.Activated {
@@ -1028,17 +1076,32 @@ DOTAScenePanel {
 }
 
 #HeroRandom {
-	background-color: gradient( linear, 0% 0%, 0% 100%, from( #651e06 ), to( #3c1b10 ) );
+	background-color: gradient( radial, 50% 50%, 0% -10%,70% 80%, from( #343f4d ),  to( #242b35 ) );
+	flow-children: down;
 }
-
+#HeroImbaRandom {
+	width:  250px;
+	background-color: gradient( radial, 50% 50%, 0% -10%,70% 80%, from( #343f4d ),  to( #242b35 ) );
+	flow-children: down;
+}
+#HeroImbaRandom .border-top {
+	background-color:  #ffffff07;
+}
+#HeroImbaRandom #HeroPickWrapper {
+	width:  250px;
+}
+#HeroImbaRandom Label {
+	/* color: #e17307; */
+	color: #dfd4a8;
+}
+#HeroRandom .border-top {
+	background-color:  #ffffff07;
+}
 #HeroRandom.Activated {
 	sound: "ui.pick_play";
 }
 
-#HeroImbaRandom {
-	background-position: 0px center;
-	background-color: gradient( linear, 0% 0%, 0% 100%, from( #650606 ), to( #3d1010 ) );
-}
+
 
 #HeroImbaRandom.Activated {
 	sound: "ui.pick_play";
